--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "sanjay ms",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
@@ -21,6 +22,8 @@
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.3",
     "sharp": "^0.32.4",
     "uuid": "^9.0.0"
   },
