--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "node app.js"
   },
   "author": "sanjay ms",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -23,9 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "otplib": "^12.0.1",
-    "qrcode": "^1.5.3",
     "sharp": "^0.32.4",
-    "uuid": "^9.0.0"
+    "twilio": "^4.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
