--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
-    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "izitoast": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
+    "mailgen": "^2.0.27",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
+    "nodemailer": "^6.9.4",
     "otplib": "^12.0.1",
     "sharp": "^0.32.4",
     "twilio": "^4.14.0"
