--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "izitoast": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "mailgen": "^2.0.27",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.4",
+    "noty": "^3.2.0-beta-deprecated",
     "otplib": "^12.0.1",
     "sharp": "^0.32.4",
     "twilio": "^4.14.0"
