--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.3.1",
+    "easyinvoice": "^3.0.23",
     "ejs": "^3.1.9",
-    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
@@ -28,7 +28,7 @@
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.4",
     "otplib": "^12.0.1",
-    "pdfkit": "^0.13.0",
+    "pdfjs-dist": "^3.10.111",
     "razorpay": "^2.9.1",
     "sharp": "^0.32.4",
     "twilio": "^4.14.0"
